--- a/app/src/main/res/layout/activity_view_feedbacks.xml
+++ b/app/src/main/res/layout/activity_view_feedbacks.xml
@@ -13,7 +13,6 @@
         android:id="@+id/bar_layout"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
         <android.support.v7.widget.Toolbar
             android:textAlignment="center"
             app:titleTextColor="#FF5722"
@@ -23,13 +22,10 @@
             android:layout_alignStart="@+id/bar_layout"
             android:layout_alignLeft="@+id/bar_layout"
             android:layout_alignTop="@+id/bar_layout"
-            android:background="#fff"
+            android:background="@drawable/background_messaging"
             android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/MenuStyle">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_back_black_24dp"/>
+
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
