--- a/app/src/main/res/layout/activity_login_mentee.xml
+++ b/app/src/main/res/layout/activity_login_mentee.xml
@@ -24,12 +24,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#FFFFFF"
-            android:textSize="40sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:fontFamily="casual"
-            android:text="SIGN IN" />
+            android:text="Your Account" />
 
-
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/ic_account_circle_black_24dp"/>
         <EditText
             android:layout_marginTop="30dp"
             android:id="@+id/email"
@@ -70,6 +73,7 @@
             />
 
         <TextView
+            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Forgot your Password?"
