--- a/app/src/main/res/layout/activity_register_mentee.xml
+++ b/app/src/main/res/layout/activity_register_mentee.xml
@@ -3,19 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/blur"
     android:layout_height="match_parent"
     tools:context=".MainActivities.activities.RegisterMenteeActivity">
-
+    <RelativeLayout
+        android:background="#4000"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <android.support.v7.widget.Toolbar
+        app:titleTextColor="@color/colorWhite"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimaryDark"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
+        app:popupTheme="@style/MenuStyle"/>
     <ScrollView
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,9 +29,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:textColor="#ffff"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="30sp"
+                android:fontFamily="casual"
                 android:text="Create an Account" />
 
 
@@ -35,55 +41,105 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/photo"
+                android:src="@drawable/ic_file_upload_black_24dp"
                 android:id="@+id/profile_image"/>
             <TextView
                 android:textAlignment="center"
+                android:textColor="#ffff"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Choose Photos"/>
-            <com.rengwuxian.materialedittext.MaterialEditText
+            <android.support.design.widget.TextInputLayout
+                android:hint="Fullname"
+                android:textColorHint="#ffff"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/fullname"
-                android:hint="Full Name"
-                android:layout_marginTop="10dp"
-                app:met_floatingLabel="normal"/>
+                android:layout_height="wrap_content">
 
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/email"
+                <EditText
+                    android:background="@drawable/input_register"
+                    android:paddingBottom="15dp"
+                    android:paddingStart="5dp"
+                    android:paddingTop="20dp"
+                    android:textColor="#ffff"
+                    android:id="@+id/fullname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:hint="Email"
-                android:layout_marginTop="10dp"
-                app:met_floatingLabel="normal"/>
-
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/password"
+                android:textColorHint="#ffff"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:background="@drawable/input_register"
+                    android:paddingBottom="15dp"
+                    android:paddingStart="5dp"
+                    android:paddingTop="20dp"
+                    android:inputType="textEmailAddress"
+                    android:textColor="#ffff"
+                    android:id="@+id/email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
                 android:hint="Password"
-                android:inputType="textPassword"
-                app:met_floatingLabel="normal" />
-
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/confirmpassword"
+                android:textColorHint="#ffff"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:background="@drawable/input_register"
+                    android:paddingBottom="15dp"
+                    android:paddingStart="5dp"
+                    android:paddingTop="20dp"
+                    android:textColor="#ffff"
+                    android:id="@+id/password"
+                    android:inputType="textPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
                 android:hint="Confirm Password"
-                android:inputType="textPassword"
-                app:met_floatingLabel="normal" />
+                android:textColorHint="#ffff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:inputType="textPassword"
+                    android:background="@drawable/input_register"
+                    android:paddingBottom="15dp"
+                    android:paddingStart="5dp"
+                    android:paddingTop="20dp"
+                    android:textColor="#ffff"
+                    android:id="@+id/confirmpassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp" />
+
+            </android.support.design.widget.TextInputLayout>
 
             <android.support.v7.widget.AppCompatButton
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btn_register"
-                android:text="REGISTER"
-                android:background="@color/colorPrimaryDark"
+                android:text="Register"
+                android:paddingLeft="20dp"
+                android:drawableRight="@drawable/ic_navigate_next_black_24dp"
+                android:background="@drawable/btn_login"
                 android:textColor="#fff"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 />
 
         </LinearLayout>
@@ -95,6 +151,6 @@
         android:visibility="gone"
         android:id="@+id/progressing"/>
 
-
+    </RelativeLayout>
 
 </RelativeLayout>
