--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -13,12 +13,12 @@
     <!-- TODO: Update blank fragment layout -->
         <LinearLayout
             android:layout_marginTop="5dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         <EditText
-            android:background="@drawable/input_back"
+            android:background="@drawable/input_register"
             android:hint="Search"
             android:textColor="#F5F2F2"
             android:paddingBottom="10dp"
