--- a/app/src/main/res/layout/mentorlist500_1000_item.xml
+++ b/app/src/main/res/layout/mentorlist500_1000_item.xml
@@ -25,7 +25,19 @@
                 android:src="@mipmap/ic_launcher"
                 android:layout_marginLeft="5dp"
                 android:layout_alignParentLeft="true" />
-
+            <TextView
+                android:background="@drawable/unread_background"
+                android:text="1"
+                android:paddingStart="6dp"
+                android:paddingRight="6dp"
+                android:layout_marginStart="-10dp"
+                android:layout_toRightOf="@+id/profile_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/unread"
+                android:textColor="#FFFFFF"
+                android:layout_marginLeft="-10dp"
+                android:paddingLeft="2dp" />
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/img_off"
                 android:layout_width="20dp"
