--- a/app/src/main/res/layout/activity_register_mentee.xml
+++ b/app/src/main/res/layout/activity_register_mentee.xml
@@ -3,9 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/blur"
     android:layout_height="match_parent"
     tools:context=".MainActivities.activities.RegisterMenteeActivity">
+    <ImageView
+        android:scaleType="fitXY"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/blur"/>
     <RelativeLayout
         android:background="#4000"
         android:layout_width="match_parent"
@@ -37,18 +43,6 @@
                 android:text="Create an Account" />
 
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_file_upload_black_24dp"
-                android:id="@+id/profile_image"/>
-            <TextView
-                android:textAlignment="center"
-                android:textColor="#ffff"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Choose Photos"/>
             <android.support.design.widget.TextInputLayout
                 android:hint="Fullname"
                 android:textColorHint="#ffff"
@@ -144,13 +138,18 @@
 
         </LinearLayout>
     </ScrollView>
+        <LinearLayout
+            android:id="@+id/line1"
+            android:background="#4000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
     <ProgressBar
         android:layout_marginTop="300dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:visibility="gone"
         android:id="@+id/progressing"/>
-
+        </LinearLayout>
     </RelativeLayout>
 
 </RelativeLayout>
