--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -2,15 +2,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/blur"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".MainActivities.activities.StartActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    <ImageView
+        android:scaleType="fitXY"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/blur"/>
     <RelativeLayout
         android:background="#40000000"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
             android:id="@+id/first"
             android:layout_centerHorizontal="true"
@@ -42,7 +53,7 @@
                         android:layout_marginTop="50dp"
                         android:layout_toRightOf="@+id/logo"
                         android:fontFamily="sans-serif-condensed-light"
-                        android:text="Counseling"
+                        android:text="Tambagi"
                         android:textColor="#F59404"
                         android:textSize="25sp"
                         android:textStyle="bold" />
@@ -54,7 +65,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_toRightOf="@+id/logo"
                         android:fontFamily="sans-serif-condensed-light"
-                        android:text=" Online"
+                        android:text="Ko"
                         android:textColor="#fff"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -147,4 +158,6 @@
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
