--- a/app/src/main/res/layout/activity_both_equi_answer.xml
+++ b/app/src/main/res/layout/activity_both_equi_answer.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.adapters.Counselors_List">
+    tools:context=".MainActivities.questions.BothEquiAnswer">
 
 </android.support.constraint.ConstraintLayout>
