--- a/app/src/main/res/layout/mentorlist500_1000_item.xml
+++ b/app/src/main/res/layout/mentorlist500_1000_item.xml
@@ -26,6 +26,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_alignParentLeft="true" />
             <TextView
+                android:visibility="gone"
                 android:background="@drawable/unread_background"
                 android:paddingStart="6dp"
                 android:paddingRight="6dp"
