--- a/app/src/main/res/layout/activity_mentor_profile.xml
+++ b/app/src/main/res/layout/activity_mentor_profile.xml
@@ -117,7 +117,6 @@
                     <TextView
                         android:textSize="13sp"
                         android:layout_width="wrap_content"
-                        android:text="@string/mentees"
                         android:textAllCaps="true"
                         android:textColor="#ffff"
                         android:layout_height="wrap_content" />
@@ -147,7 +146,6 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
-                        android:id="@+id/feedbacks"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
@@ -195,12 +193,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
-                <com.hsalf.smilerating.SmileRating
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:id="@+id/rate_ave"
+                    android:textColor="#111"
+                    android:layout_centerHorizontal="true"
+                    android:layout_above="@+id/rating_bar"/>
+                <RatingBar
+                    style="android:style/Widget.Material.RatingBar.Small"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/rating_bar"
+                    android:numStars="5"
+                    android:progressTint="#F5DC12"
+                    android:stepSize="0.5"
+                    android:isIndicator="true"
                     android:layout_below="@id/rating"
-                    android:layout_width="200dp"
-                    android:layout_height="100dp" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
                 <View
                     android:layout_below="@id/rating_bar"
                     android:layout_marginTop="15dp"
