--- a/app/src/main/res/layout/activity_mentor_profile.xml
+++ b/app/src/main/res/layout/activity_mentor_profile.xml
@@ -20,14 +20,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <Button
-                    android:id="@+id/back"
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:background="#40000000"
-                    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
-                    android:text="BACK"
-                    android:textAlignment="center" />
+
+                <android.support.v7.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/toolbar"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
