--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -23,16 +23,34 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
+
         android:layout_alignParentEnd="true"
         android:layout_marginStart="150dp"
         android:layout_marginEnd="10dp"
         android:textColor="#111"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="15dp"
         android:layout_toEndOf="@+id/profile_image"
         android:layout_toRightOf="@+id/profile_image"
         android:background="@drawable/btn_add_style"
         android:text="Add"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="90dp" />
+    <Button
+        android:visibility="gone"
+        android:id="@+id/btn_message"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_above="@+id/btn_add"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="150dp"
+        android:layout_marginEnd="10dp"
+        android:textColor="#111"
+        android:layout_marginBottom="10dp"
+        android:layout_toEndOf="@+id/profile_image"
+        android:layout_toRightOf="@+id/profile_image"
+        android:background="@drawable/btn_add_style"
+        android:text="Message"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="90dp" />
