--- a/app/src/main/res/layout/activity_question1.xml
+++ b/app/src/main/res/layout/activity_question1.xml
@@ -9,8 +9,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivities.questions.Question1">
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <TextView
             android:textAlignment="center"
             android:layout_width="match_parent"
