--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -36,7 +36,7 @@
             android:background="@drawable/background_right"
             android:padding="8dp"
             android:text="hello"
-            android:textColor="@color/colorWhite"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
