--- a/app/src/main/res/drawable/background_right.xml
+++ b/app/src/main/res/drawable/background_right.xml
@@ -7,5 +7,6 @@
         android:topRightRadius="0dp"
         />
 
-    <solid android:color="@color/colorPrimary"/>
+    <gradient android:startColor="#50A7C2 "
+        android:endColor="#B7F8DB"/>
 </shape>
