--- a/app/src/main/res/layout/activity_answer_equivalent4.xml
+++ b/app/src/main/res/layout/activity_answer_equivalent4.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivities.questions.EquiAnswer3">
+    tools:context=".MainActivities.questions.AnswerEquivalent4">
 
 </android.support.constraint.ConstraintLayout>
