--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -82,7 +82,11 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
+                <ProgressBar
+                    android:visibility="gone"
+                    android:id="@+id/progressBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <TextView
                     android:layout_marginBottom="10dp"
                     android:layout_width="match_parent"
